--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,15 +8,6 @@
 
 
     <FrameLayout
-        android:id="@+id/selector"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/map"
-        />
-    <FrameLayout
         android:id="@+id/map"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -24,7 +15,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/selector"/>
+        app:layout_constraintBottom_toTopOf="@+id/selector"
+        />
+
+    <FrameLayout
+        android:id="@+id/selector"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/map"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
