--- a/app/src/main/res/layout/list_selection.xml
+++ b/app/src/main/res/layout/list_selection.xml
@@ -2,16 +2,23 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintLeft_toLeftOf="parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="8dp">
+    >
 
     <ImageView
         android:id="@+id/image"
         android:layout_width="48dp"
         android:layout_height="48dp"
         app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="8dp"
         app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="8dp"
         app:layout_constraintTop_toTopOf="parent"
+        android:scaleType="fitXY"
         app:layout_constraintBottom_toTopOf="@+id/descript"
         />
     <TextView
@@ -22,9 +29,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/image"
         android:text="Description" />
 
